support ams in jdk17